feat(main): playing around with stream()